--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,12 @@ html {
 body{
     background:#e9e9e9;
 }
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+
 
 .card {
   margin: 0 auto 60px;
