--- a/app/views/customers/customers/show.html.erb
+++ b/app/views/customers/customers/show.html.erb
@@ -2,7 +2,7 @@
     <div class="container">  
         <div class="row">
             
-            <div class="col-md-3 p-4 mt-5 border rounded shadow h-50 bg-light" >
+            <div class="col-md-3 p-4 mt-5 border rounded shadow h-50 bg-white" >
                 <!--ユーザーサイドバー-->
                 <%= render 'customers/customers/info' , post: @customer, customer: @customer %>
                  <!--投稿フォーム-->
@@ -10,8 +10,8 @@
                 
             </div>
             
-            <div class="col-md-8 offset-md-1">
-                <div class="row col-md-9 p-4 mt-5 border rounded shadow bg-light">
+            <div class="col-md-7 offset-md-1">
+                <div class="row col-md-9 p-4 mt-5 border rounded shadow bg-white">
                         <!--プロフィール画像-->
                         <div class="col-md-3"><%= render "customers/shared/image_attached", post: @customer %></div>
                         <div class="col-md-4"><%= @customer.name %></div>
@@ -32,19 +32,24 @@
                 
                 <div class="row mt-3">
                     <% @posts.each do |post| %>
-                        <div class="col-md-9 border rounded mt-3 mb-3 p-3 shadow bg-light ">
-                            
+                        <div class="col-md-9 border rounded mt-3 mb-3 p-3 shadow bg-white">
+                            <div class="row mb-3">
+                            <div class="col-md-3"><%= render "customers/shared/image_attached", post: @customer %></div>
+                            <div class="col-md-4"><%= @customer.name %></div>
+                            <div class="col-md-3 col-sm-4"><%= l post.created_at, format: :short %></div>
+                            </div>
+                            <div class="col-md-12 mt-3 mb-3 text-break"><%= post.content %></div>
                             <!------投稿画像------->
                             <% if post.post_image.attached? %>
-                                <%= image_tag post.post_image.variant(resize:'450x400')  %>
+                                <div class="image"><%= image_tag post.post_image.variant(resize:'450x400')%></div>
                             <% end %>
-                            <div class="col-md-12 mt-3 mb-3 text-break"><%= post.content %></div>
-                            <div class="row">
-                                <div class="col-md-3 col-sm-4 mt-2"><%= l post.created_at, format: :short %></div>
-                                <div class="mt-2 ml-2 mr-3">いいね：<strong><%= post.favorites.count %></strong></div>
-                                <div class="mt-2">コメント：<strong><%= post.post_comments.count %></strong></div>
-                                <div class="col-md-3 ml-4"><%= link_to "詳細を見る", post_path(post.id), class:"btn btn-light" %></div>
+                            
+                            <div class="row d-flex flex-row mt-5">
+                                <div class="col-md-3 ml-2"><i class="fas fa-heart fa-2x"></i> <strong><%= post.favorites.count %></strong></div>
+                                <div class="col-md-3"><i class="fas fa-comment fa-2x"></i> <strong><%= post.post_comments.count %></strong></div>
+                                <div class="col-md-4 offset-md-1"><%= link_to "詳細を見る", post_path(post.id), class:"btn btn-light" %></div>
                             </div>
+                            
                         </div>
                     <% end %>
                 </div>
