--- a/app/views/customers/customers/index.html.erb
+++ b/app/views/customers/customers/index.html.erb
@@ -12,19 +12,19 @@
             </div>
             <div class="col-md-8 offset-1">
                 <% @customers.each do |customer| %>
-                    <div class="col-md-8 p-4 mt-5 border rounded shadow bg-white">
+                    <div class="col-md-8 pt-3 mt-5 border rounded shadow bg-white">
                                  
                         <div class="col-md-12 d-flex">
                             
                             <!--プロフィール画像-->
-                            <div><%= render "customers/shared/image_attached", post: customer %></div>
-                            <p class="col-md-4 offset-md-1"><%= link_to customer.name,customer_path(customer.id) %></p>
+                            <div class="col-md-3"><%= render "customers/shared/image_attached", post: customer %></div>
+                            <p class="col-md-4"><%= link_to customer.name,customer_path(customer.id) %></p>
                             
                             <% if current_customer.id == customer.id %>
-                                <div class="col-md-6 offset-md-2"><i class="fas fa-user-check fa-3x"></i></div>
+                                <div class="col-md-4 offset-md-1"><i class="fas fa-user-check fa-3x"></i></div>
                             <% else %>
                             <!--フォローボタン-->
-                            <div class="col-md-6 offset-md-1" id="follow_ <%= @customer %>"><%= render "customers/relationships/follow" , customer: customer %> </div>
+                            <div class="col-md-5" id="follow_ <%= @customer %>"><%= render "customers/relationships/follow" , customer: customer %> </div>
                             <% end %>
 
                             
